<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<CheckBox android:text="@string/enable_filter" android:id="@+id/cbFilterOn" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
	<RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/rgFilterMode">
		<RadioButton android:text="@string/trash_all" android:id="@+id/useContacts" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
		<RadioButton android:text="@string/trash_blacklist" android:id="@+id/useBlacklist" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	</RadioGroup>
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blacklist"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:text="@string/add_blacklist" android:id="@+id/btnAddNum" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
		<Button android:text="@string/add_blacklist_from_inbox" android:id="@+id/btnAddNumFromInbox" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	</LinearLayout>
	<ListView android:id="@+id/listFilterNumbers"
		android:paddingTop="10dip"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"/>
</LinearLayout>
